            * 绘制圆弧系列（fillArc、strokeArc、fullArc）的闭合方式添加```-round```选项
            * getColor 获取指定位置颜色
        2、SVG画笔
            * 绘制圆弧系列（fillArc、strokeArc、fullArc）的闭合方式添加```-round```选项
        3、WebGL画笔
            * 材料material新增多颜色值colors
        4、朴素的WebGL接口集合
            * getWebGLContext 画笔
            * Shader 着色器
            * Buffer 缓冲区
            * Texture 纹理
v0.3.1:
    date:2023-07-08
    changes:
      - 修复bug
        1、Canvas画笔
            * 优化区域计算有时候出错问题
v0.4.0:
    date:2023-07-22
    changes:
      - 新增功能
        1、Canvas画笔
            * textWidth 计算文字宽
v0.4.1:
    date:2023-09-03
    changes:
      - 修复bug
        1、uni-app平台的ui-canvas在微信小程序环境下有时会绘制失败并渲染过慢问题
        2、Canvas画笔
            * 多行文字（fillTexts、strokeTexts、fullTexts）在处理有换行文字时的未正确处理
        3、SVG画笔
            * 部分默认值失效
      - 优化改造
        1、优化WebGL区域计算设计
        2、丰富types并暴露更多有用的类型对象
      - 新增功能
        1、Canvas画笔
            * 添加region配置，可以控制是否支持区域管理
            * onlyRegion 区域模式
        2、WebGL画笔
            * 添加region配置，可以控制是否支持区域管理
        3、uni-app平台的ui-canvas
            * 画笔的draw方法对外暴露更丰富的参数
            * 添加region属性，可以控制是否支持区域管理
        4、微信小程序平台的ui-canvas
            * 添加region属性，可以控制是否支持区域管理
        5、viewHandler新增对悬浮hover事件的捕获并统一添加event参数
        6、刻度尺算法ruler新增可选上下界约束
        7、颜色格式化 formatColor
          （支持平台：H5）
        8、节点缩放监听 resizeObserver
          （支持平台：H5）
        9、节流函数 throttle
        10、布局
            * 树布局 treeLayout
        11、着色器compile方法丰富参数（添加color、colors、image、cube四种内置着色器程序）
v0.5.0:
    date:2023-10-01
    changes:
      - 修复bug
        1、SVG画笔
            * 修改文字默认值错误（50恢复成16）
      - 优化改造
        1、一些types定义优化（比如 Array<number> 改成更具体的 [number, number] 类型）
      - 新增功能
        1、Geometry 几何体运算
            * cylinder 圆柱体
            * prism 棱柱体
            * sphere 球体
        2、SVG画笔
            * bind 绑定事件
        3、布局的bind和use方法新增第二个可选参数noOpens，用于控制结点默认是否闭合
v0.5.2:
    date:
    changes:
      - 修复bug
        1、修复ui-canvas在支付宝小程序模拟器中的错误