@@ -1,3 +1,3 @@
 window.VISLite_system = {
-    "version": "0.5.2-alpha.1"
+    "version": "0.5.2"
 };
