@@ -16,7 +16,7 @@
 <p>
     传递的json我们称为Object3D类型，有固定的格式：
 </p>
-<button tag="Object3D" type="explain">点击查看如何构建？</button>
+<button tag="Object3D" type="explain">Object3D格式</button>
 <p>
     上述格式中的
     <span class="special">geometry.type</span>
