@@ -1,0 +1,3 @@
+import move from "../../src/move"
+
+export default move
