@@ -1,0 +1,3 @@
+import scale from "../../src/scale"
+
+export default scale
