@@ -1,0 +1,3 @@
+export default interface moveType {
+    (ax: number, ay: number, d: number, x: number, y: number): [number, number]
+}
