@@ -1,0 +1,3 @@
+export default interface scaleType {
+    (cx: number, cy: number, times: number, x: number, y: number): [number, number]
+}
